# agentops-studio

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml
apps/runtime/: Dockerfile  pyproject.toml
apps/runtime/app/: main.py
apps/runtime/app/adapters/: __init__.py
apps/runtime/app/core/: config.py
apps/runtime/app/eval/: __init__.py
apps/runtime/app/tools/: __init__.py
apps/runtime/app/utils/: logger.py
apps/runtime/tests/: conftest.py  test_health.py
apps/web/: README.md
docs/: architecture.mmd
